v10.3.0/_sources/generated/pcdsdevices.sensors.TwinCATThermocouple.rst.txt
pcdsdevices.sensors.TwinCATThermocouple
=======================================

.. currentmodule:: pcdsdevices.sensors

.. autoclass:: TwinCATThermocouple

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - temperature
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:STC:TEMP``
          - 
          - normal
          - 
    
        * - sensor_connected
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:STC:CONN``
          - 
          - normal
          - 
    
        * - error
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:STC:ERR``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: subscriptions
    
    